@@ -736,7 +736,5 @@ main (int argc, char *argv[])
 
         gtk_main();
 
-	gtk_object_unref(GTK_OBJECT(client));
-
 	return 0;
 }
